# tailr

./: .gitignore  .travis.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  forwarder.go  forwarder_test.go  main.go
